# Ph2_ACF

./: CMakeLists.txt  Jenkinsfile  README.md  setup.sh
AMC13/: CMakeLists.txt
DQMUtils/: CMakeLists.txt  DQMEvent.cc  DQMEvent.h  DQMHistogramBase.h  DQMHistogramCalibrationExample.cc  DQMHistogramCalibrationExample.h  DQMHistogramLatencyScan.cc  DQMHistogramLatencyScan.h  DQMHistogramPedeNoise.cc  DQMHistogramPedeNoise.h  DQMHistogramPedestalEqualization.cc  DQMHistogramPedestalEqualization.h  DQMHistogramSignalScanFit.cc  DQMHistogramSignalScanFit.h  DQMHistogramTPCalibration.cc  DQMHistogramTPCalibration.h  DQMHistogrammer.cc  DQMHistogrammer.h  DQMInterface.cc  DQMInterface.h  RD53ClockDelayHistograms.cc  RD53ClockDelayHistograms.h  RD53GainHistograms.cc  RD53GainHistograms.h  RD53GainOptimizationHistograms.cc  RD53GainOptimizationHistograms.h  RD53InjectionDelayHistograms.cc  RD53InjectionDelayHistograms.h  RD53LatencyHistograms.cc  RD53LatencyHistograms.h  RD53PhysicsHistograms.cc  RD53PhysicsHistograms.h  RD53PixelAliveHistograms.cc  RD53PixelAliveHistograms.h  RD53SCurveHistograms.cc  RD53SCurveHistograms.h  RD53ThrEqualizationHistograms.cc  RD53ThrEqualizationHistograms.h  RD53ThrMinimizationHistograms.cc  RD53ThrMinimizationHistograms.h  (+2 more)
HWDescription/: BeBoard.cc  BeBoard.h  CMakeLists.txt  Cbc.cc  Cbc.h  Chip.cc  Chip.h  ChipRegItem.h  Cic.cc  Cic.h  Definition.h  FrontEndDescription.cc  FrontEndDescription.h  MPA.cc  MPA.h  Module.cc  Module.h  OuterTrackerModule.cc  OuterTrackerModule.h  RD53.cc  RD53.h  ReadoutChip.cc  ReadoutChip.h  SSA.cc  SSA.h
HWInterface/: BeBoardFWInterface.cc  BeBoardFWInterface.h  BeBoardInterface.cc  BeBoardInterface.h  CMakeLists.txt  CbcInterface.cc  CbcInterface.h  ChipInterface.cc  ChipInterface.h  D19cFWInterface.cc  D19cFWInterface.h  D19cFpgaConfig.cc  D19cFpgaConfig.h  Firmware.h  FpgaConfig.cc  FpgaConfig.h  MPAInterface.cc  MPAInterface.h  MmcPipeInterface.cc  MmcPipeInterface.h  RD53FWInterface.cc  RD53FWInterface.h  RD53Interface.cc  RD53Interface.h  ReadoutChipInterface.cc  ReadoutChipInterface.h  RegManager.cc  RegManager.h  SSAInterface.cc  SSAInterface.h
NetworkUtils/: CMakeLists.txt  TCPClient.cc  TCPClient.h  TCPClientBase.cc  TCPClientBase.h  TCPPacket.cc  TCPPacket.h  TCPPublishServer.cc  TCPPublishServer.h  TCPReceiverSocket.cc  TCPReceiverSocket.h  TCPServer.cc  TCPServer.h  TCPServerBase.cc  TCPServerBase.h  TCPSocket.cc  TCPSocket.h  TCPSubscribeClient.cc  TCPSubscribeClient.h  TCPTransceiverSocket.cc  TCPTransceiverSocket.h  TCPTransmitterSocket.cc  TCPTransmitterSocket.h
RootUtils/: CMakeLists.txt  CanvasContainer.h  HistContainer.h  PlotContainer.cc  PlotContainer.h  RootContainerFactory.cc  RootContainerFactory.h
RootWeb/: CMakeLists.txt
RootWeb/include/: rootweb.hh
RootWeb/src/: rootweb.cpp
System/: CMakeLists.txt  FileParser.cc  FileParser.h  SystemController.cc  SystemController.h
Utils/: CBCChannelGroupHandler.cc  CBCChannelGroupHandler.h  CMakeLists.txt  ChannelGroupHandler.cc  ChannelGroupHandler.h  CommonVisitors.h  Container.cc  Container.h  ContainerFactory.cc  ContainerFactory.h  ContainerStream.cc  ContainerStream.h  D19cCbc3Event.cc  D19cCbc3Event.h  D19cCbc3EventZS.cc  D19cCbc3EventZS.h  D19cMPAEvent.cc  D19cMPAEvent.h  D19cSSAEvent.cc  D19cSSAEvent.h  DataContainer.cc  DataContainer.h  EmptyContainer.h  Event.cc  Event.h  FileHandler.cc  FileHandler.h  FileHeader.h  GainAndIntercept.cc  GainAndIntercept.h  GenericDataArray.h  GenericDataVector.h  MPAEvent.cc  MPAEvent.h  MessageTools.h  MiddlewareInterface.cc  MiddlewareInterface.h  ObjectStream.cc  ObjectStream.h  Occupancy.cc  (+23 more)
cmake/: FindCACTUS.cmake
miniDAQ/: CMakeLists.txt  MiddlewareController.cc  MiddlewareController.h  RunController.cc
settings/: CMSIT.xml  D19CDescription.xml  D19CDescriptionSSA.xml  D19CDescription_SignalScanTest.xml  FNAL_TB.xml  logger.conf
settings/RD53Files/: CMSIT_RD53.txt
settings/SSAFiles/: SSA_AllStrips.txt
settings/address_tables/: CMSIT_address_table.xml  CMSIT_address_table_ddr3.xml  CMSIT_address_table_system.xml  CMSIT_address_table_user.xml  d19c_address_table.xml  d19c_address_table_SignalScanTest.xml
src/: CMSIT_miniDAQ.cc  CMakeLists.txt  MPA_async_test.cc  MPA_sync_test.cc  SSATEST.cc  calibrate.cc  calibration_example.cc  cbc3irrad.cc  cmtest.cc  commission.cc  d19c_test.cc  datatest.cc  fpgaconfig.cc  hybridtest.cc  integratedtester.cc  miniDAQ.cc  miniSLinkDQM.cc  network_client.cc  network_server.cc  network_test.cc  pulseshape.cc  stubtest.cc  supervisor.cc  systemtest.cc  tpcalibration.cc
tools/: AntennaTester.cc  AntennaTester.h  BiasSweep.cc  BiasSweep.h  CMFits.h  CMTester.cc  CMTester.h  CMakeLists.txt  CalibrationExample.cc  CalibrationExample.h  Channel.cc  Channel.h  CombinedCalibration.h  HybridTester.cc  HybridTester.h  LatencyScan.cc  LatencyScan.h  PedeNoise.cc  PedeNoise.h  PedestalEqualization.cc  PedestalEqualization.h  PulseShape.cc  PulseShape.h  RD53ClockDelay.cc  RD53ClockDelay.h  RD53Gain.cc  RD53Gain.h  RD53GainOptimization.cc  RD53GainOptimization.h  RD53InjectionDelay.cc  RD53InjectionDelay.h  RD53Latency.cc  RD53Latency.h  RD53Physics.cc  RD53Physics.h  RD53PixelAlive.cc  RD53PixelAlive.h  RD53SCurve.cc  RD53SCurve.h  RD53ThrEqualization.cc  (+19 more)
